# raymarch

./: .gitignore  CMakeLists.txt
include/: Box.hpp  Camera.hpp  DirectionalLight.hpp  Light.hpp  Material.hpp  Object.hpp  Parser.hpp  Plane.hpp  PointLight.hpp  Ray.hpp  Renderer.hpp  Sphere.hpp  World.hpp
src/: Camera.cpp  Parser.cpp  Renderer.cpp  World.cpp  main.cpp
tests/: Test1.scene  Test2.scene  Test3.scene
